Add GLEW 1.12.0 as a dependency
Add extra install step to
 * install GLEW headers (bug in upstream CMake file).
 * remove glewinfo executable.
 * remove visualinfo executable.
 * remove GLEW pkg-config files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -163,6 +163,38 @@ ExternalProject_Add_Step(openal-soft
     COMMENT "Remove openal additional files"
 )
 
+ExternalProject_Add(glew
+    URL http://sourceforge.net/projects/glew/files/glew/1.12.0/glew-1.12.0.tgz/download
+    URL_MD5 01246c7ecd135d99be031aa63f86dca1
+    DOWNLOAD_DIR ${SDK_DOWNLOAD_DIR}
+    CMAKE_ARGS
+        -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR>
+    INSTALL_DIR ${SDK_INSTALL_DIR}
+)
+
+# This circumvents a bug in the upstream CMakeLists.txt file
+ExternalProject_Add_Step(glew
+    installHEADER
+    DEPENDEES install
+    WORKING_DIRECTORY <INSTALL_DIR>
+    COMMAND ${CMAKE_COMMAND} -E copy_directory <SOURCE_DIR>/include <INSTALL_DIR>/include
+    COMMENT "Copy glew header files to SDK"
+)
+
+# This circumvents a missing option to prevent installing the executables
+# pkgconfig files
+ExternalProject_Add_Step(glew
+    removeExtraFiles
+    DEPENDEES install
+    WORKING_DIRECTORY <INSTALL_DIR>
+    COMMAND ${CMAKE_COMMAND} -E remove
+        <INSTALL_DIR>/bin/glewinfo
+        <INSTALL_DIR>/bin/visualinfo
+        <INSTALL_DIR>/lib/pkgconfig/glew.pc
+        <INSTALL_DIR>/lib/pkgconfig/glewmx.pc
+    COMMENT "Remove glew additional files"
+)
+
 set_directory_properties(
     PROPERTIES
     ADDITIONAL_MAKE_CLEAN_FILES
