--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,37 @@ ExternalProject_Add_Step(sdl
     COMMENT "Remove sdl additional files"
 )
 
+ExternalProject_Add(libogg
+    URL http://downloads.xiph.org/releases/ogg/libogg-1.3.2.tar.gz
+    URL_MD5 b72e1a1dbadff3248e4ed62a4177e937
+    DOWNLOAD_DIR ${SDK_DOWNLOAD_DIR}
+    CONFIGURE_COMMAND <SOURCE_DIR>/configure
+        --prefix=<INSTALL_DIR>
+        --disable-oggtest
+    INSTALL_DIR ${SDK_INSTALL_DIR}
+)
+
+# This circumvents a missing option in the upstream configure.ac file
+ExternalProject_Add_Step(libogg
+    deleteDocumentation
+    DEPENDEES install
+    WORKING_DIRECTORY <INSTALL_DIR>
+    COMMAND ${CMAKE_COMMAND} -E remove_directory <INSTALL_DIR>/share/doc/libogg
+    COMMENT "Remove documentation for libogg from SDK"
+)
+
+# This circumvents a missing option to prevent installing the executables
+# pkgconfig files
+ExternalProject_Add_Step(libogg
+    removeExtraFiles
+    DEPENDEES install
+    WORKING_DIRECTORY <INSTALL_DIR>
+    COMMAND ${CMAKE_COMMAND} -E remove
+        <INSTALL_DIR>/lib/pkgconfig/ogg.pc
+        <INSTALL_DIR>/share/aclocal/ogg.m4
+    COMMENT "Remove libogg additional files"
+)
+
 set_directory_properties(
     PROPERTIES
     ADDITIONAL_MAKE_CLEAN_FILES
