Add SDL 2.0.3 as a dependency
Change default build configuration.

SDL builds now
  * without building a static library.

Add extra install step to remove
  * sdl2-config binary.
  * SDL2 Autoconf macro.
  * SDL2 pkg-config file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,29 @@ ExternalProject_Add(zlib
     INSTALL_DIR ${SDK_INSTALL_DIR}
 )
 
+ExternalProject_Add(sdl
+    URL https://www.libsdl.org/release/SDL2-2.0.3.tar.gz
+    URL_MD5 fe6c61d2e9df9ef570e7e80c6e822537
+    DOWNLOAD_DIR ${SDK_DOWNLOAD_DIR}
+    CMAKE_ARGS
+        -DSDL_STATIC=OFF
+        -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR>
+    INSTALL_DIR ${SDK_INSTALL_DIR}
+)
+
+# This circumvents a missing option to prevent installing the executables
+# pkgconfig files
+ExternalProject_Add_Step(sdl
+    removeExtraFiles
+    DEPENDEES install
+    WORKING_DIRECTORY <INSTALL_DIR>
+    COMMAND ${CMAKE_COMMAND} -E remove
+        <INSTALL_DIR>/bin/sdl2-config
+        <INSTALL_DIR>/share/aclocal/sdl2.m4
+        <INSTALL_DIR>/lib/pkgconfig/sdl2.pc
+    COMMENT "Remove sdl additional files"
+)
+
 set_directory_properties(
     PROPERTIES
     ADDITIONAL_MAKE_CLEAN_FILES
