Set up the CMake ExternalProject module to build dependencies
Add the internal `SDK_INSTALL_DIR` variable to name the root directory
of the SDK package.  The contents of this directory should represent
whatever the user should recieve as SDK tree.

Add the internal `SDK_DOWNLOAD_DIR` to set a common directory where all
dependency release downloads are located.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,20 @@
 cmake_minimum_required(VERSION 2.8)
 
 project(FreeOrionSDK)
+
+include(ExternalProject)
+
+# Root directory of the SDK release.  This directory should contain
+# everything a user needs to build FreeOrion from source.
+set(SDK_INSTALL_DIR ${CMAKE_BINARY_DIR}/INSTALL)
+
+# Common download directory for all dependency source releases.  Storing
+# those in a separate directory from the standard *-prefix directories
+# prevents re-downloading them when cleaning up the SDK build.
+set(SDK_DOWNLOAD_DIR downloads)
+
+set_directory_properties(
+    PROPERTIES
+    ADDITIONAL_MAKE_CLEAN_FILES
+    ${SDK_INSTALL_DIR}
+)
