When checking for `patch` test the variable name, not the value

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,7 @@ if(WIN32)
 else()
     add_custom_target(patch)
     find_program(PATCH_EXECUTABLE patch)
-    if(NOT ${PATCH_EXECUTABLE})
+    if(NOT PATCH_EXECUTABLE)
         message(FATAL_ERROR "Unable to locate `patch` executable.")
     endif()
 endif()
