Disable DirectX and Direct3D renderer for SDL
FreeOrion doesn't need neither of those and keeping those enabled would
require developers to install the DirectX SDK.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -254,6 +254,8 @@ ExternalProject_Add(sdl
     DOWNLOAD_DIR ${SDK_DOWNLOAD_DIR}
     CMAKE_ARGS
         -DSDL_STATIC=OFF
+        -DDIRECTX=OFF
+        -DRENDER_D3D=OFF
         -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR>
     INSTALL_DIR ${SDK_INSTALL_DIR}
 )
