Change the python build configuration
python builds now (additional to the previous setup)
 * without ctypes extension
 * without ctypes_test extension
 * without elementtree extension
 * without multiprocessing extension
 * without pyexpat extension
 * without select extension
 * without socket extension
 * without testcapi extension
 * without unicodedata extension

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -178,11 +178,12 @@ ExternalProject_Add(python
         #DENABLE_CODECS_TW=OFF
         #DENABLE_CRYPT=OFF
         -DENABLE_CSV=OFF
-        #DENABLE_CTYPES_TEST=OFF
+        -DENABLE_CTYPES=OFF
+        -DENABLE_CTYPES_TEST=OFF
         #DENABLE_CURSES=OFF
         #DENABLE_CURSES_PANEL=OFF
         #DENABLE_DBM=OFF
-        #DENABLE_ELEMENTTREE=OFF
+        -DENABLE_ELEMENTTREE=OFF
         #DENABLE_FCNTL=OFF
         -DENABLE_GDBM=OFF
         -DENABLE_GRP=OFF
@@ -193,26 +194,26 @@ ExternalProject_Add(python
         -DENABLE_LINUXAUDIODEV=OFF
         #DENABLE_MMAP=OFF
         #DENABLE_MULTIBYTECODEC=OFF
-        #DENABLE_MULTIPROCESSING=OFF
+        -DENABLE_MULTIPROCESSING=OFF
         -DENABLE_NIS=OFF
         #DENABLE_NT=OFF
         -DENABLE_OSSAUDIODEV=OFF
         #DENABLE_PARSER=OFF
         #DENABLE_POSIX=OFF
         -DENABLE_PWD=OFF
-        #DENABLE_PYEXPAT=OFF
+        -DENABLE_PYEXPAT=OFF
         #DENABLE_READLINE=OFF
-        #DENABLE_SELECT=OFF
-        #DENABLE_SOCKET=OFF
+        -DENABLE_SELECT=OFF
+        -DENABLE_SOCKET=OFF
         -DENABLE_SPWD=OFF
         -DENABLE_SQLITE3=OFF
         #DENABLE_SSL=OFF
         #DENABLE_STRUCT=OFF
         #DENABLE_SYSLOG=OFF
         #DENABLE_TERMIOS=OFF
-        #DENABLE_TESTCAPI=OFF
+        -DENABLE_TESTCAPI=OFF
         #DENABLE_TKINTER=OFF
-        #DENABLE_UNICODEDATA=OFF
+        -DENABLE_UNICODEDATA=OFF
         #DENABLE_ZLIB=OFF
     INSTALL_DIR ${SDK_INSTALL_DIR}
 )
