Patch zlib build system
The current upstream build system does not honor the CMake
`BUILD_SHARED_LIBS` variable, allowing users to decide if they want to
build a shared or a static variant of the library.  The patch removes
the zlibstatic target and uses the `BUILD_SHARED_LIBS` variable instead.

The current upstream build system does not install the `program database`
.pdb files, which contain debugging symbols.  The patch install the
`zlib.pdb` file into the `lib` directory of the installation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,9 +53,12 @@ else()
 endif()
 
 ExternalProject_Add(zlib
+    DEPENDS patch
     URL http://sourceforge.net/projects/libpng/files/zlib/1.2.8/zlib-1.2.8.tar.gz/download
     URL_MD5 44d667c142d7cda120332623eab69f40
     DOWNLOAD_DIR ${SDK_DOWNLOAD_DIR}
+    PATCH_COMMAND
+        ${PATCH_EXECUTABLE} -p1 < ${CMAKE_SOURCE_DIR}/zlib.patch
     CMAKE_ARGS
         -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR>
         -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS}
