Patch python-cmake build system
The current upstream build system does not install the python headers
consistently into `include/python2.7`.  The patch removes this special
variation for Visual Studio builds.

The current upstream build system does install the export libraries into
`libs` instead of `lib`.  The patch changes the installation directory
to `lib`.

The current upstream build system does install the Python Standard
Library into the `lib` directory.  The patch moves the Python Standard
Library into `lib/<base name of the python import shared library>`.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,8 +132,11 @@ set(PYTHON_VERSION 2.7.9)
 set(PYTHON_INSTALL_DIR ${SDK_INSTALL_DIR})
 
 ExternalProject_Add(python-cmake
+    DEPENDS patch
     URL https://github.com/python-cmake-buildsystem/python-cmake-buildsystem/archive/master.zip
     DOWNLOAD_DIR ${SDK_DOWNLOAD_DIR}
+    PATCH_COMMAND
+        ${PATCH_EXECUTABLE} -p1 < ${CMAKE_SOURCE_DIR}/python-cmake.patch
     CONFIGURE_COMMAND ""
     BUILD_COMMAND ""
     INSTALL_COMMAND ""
