Change build configuration of FreeType
The upstream doesn't explicit export any symbols, therefor no import
library is generated.  To fix this the `BUILD_SHARED_LIBS` was set to
`OFF` for the `freetype` target.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -298,7 +298,9 @@ ExternalProject_Add(freetype2
     DOWNLOAD_DIR ${SDK_DOWNLOAD_DIR}
     CMAKE_ARGS
         -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR>
-        -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS}
+        # FreeType doesn't provide any exported symbols, so build
+        # it as static library.
+        -DBUILD_SHARED_LIBS=OFF
         -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
     INSTALL_DIR ${SDK_INSTALL_DIR}
 )
