Change the boost build configuration
boost builds now (additional to the previous setup)
 * with the correct search location for the libpython library.

--- a/boost-config.jam.in
+++ b/boost-config.jam.in
@@ -1,7 +1,7 @@
 using python
-   : @PYTHON_VERSION@  # version
-   : @PYTHON_INSTALL_DIR@/bin/python@PYTHON_VERSION@  # cmd-or-prefix
-   : @PYTHON_INSTALL_DIR@/include/python@PYTHON_VERSION@ # includes
-   : @PYTHON_INSTALL_DIR@/lib/python@PYTHON_VERSION@ # libraries
-   : <address-model>32 # condition
-   ;
+    : @PYTHON_VERSION@  # version
+    : @SDK_INSTALL_DIR@/bin/python@PYTHON_VERSION@  # cmd-or-prefix
+    : @SDK_INSTALL_DIR@/include/python@PYTHON_VERSION@ # includes
+    : @SDK_INSTALL_DIR@/lib # libraries
+    : <address-model>32 # condition
+    ;
