Change the python build configuration
python builds now (additional to the previous setup)
 * without building the wininst executable with the current toolchain

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -169,6 +169,7 @@ ExternalProject_Add(python
         -DPY_VERSION=${PYTHON_VERSION}
         -DDOWNLOAD_SOURCES=OFF
         -DBUILD_TESTING=OFF
+        -DBUILD_WININST=OFF
         -DENABLE_AUDIOOP=OFF
         -DENABLE_BSDDB=OFF
         #DENABLE_BZ2=OFF
